<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.rcsb</groupId>
    <artifactId>strucmotif-search</artifactId>
    <version>0.7.2</version>
    <modules>
        <module>strucmotif-search-core</module>
        <module>strucmotif-search-benchmark</module>
        <module>strucmotif-search-update</module>
    </modules>
    <packaging>pom</packaging>
    <description>Real-time search for structural motifs in protein structures</description>

    <name>strucmotif-search</name>
    <url>http://github.com/rcsb/strucmotif-search</url>
    <organization>
        <name>RCSB PDB</name>
        <url>https://www.rcsb.org/</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Sebastian Bittrich</name>
            <email>sebastian.bittrich@rcsb.org</email>
            <organization>RCSB PDB</organization>
            <organizationUrl>http://www.rcsb.org</organizationUrl>
        </developer>
    </developers>

    <dependencies>
        <!-- logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>
    </dependencies>
    
    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
    </properties>

    <scm>
        <connection>scm:git:git://github.com/rcsb/strucmotif-search.git</connection>
        <developerConnection>scm:git:https://github.com/rcsb/strucmotif-search.git</developerConnection>
        <url>http://github.com/rcsb/strucmotif-search</url>
        <tag>strucmotif-search-0.7.2</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.2</version>
            </plugin>

            <!-- address illegal reflection warning when tests are executed -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <downloadUrl>http://nexus3.rcsb.org/repository/rcsb-super-proxy/</downloadUrl>
        <repository>
            <id>nexus-releases</id>
            <name>RCSB PDB Maven Repository</name>
            <url>http://nexus3.rcsb.org/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>nexus-snapshots</id>
            <url>http://nexus3.rcsb.org/repository/maven-snapshots/</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>sonar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- Optional URL to server. Default value is http://localhost:9000 -->
                <sonar.host.url>
                    http://sonarqube.rcsb.org
                </sonar.host.url>
            </properties>
        </profile>
    </profiles>
</project>